--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.553.0",
     "three/": "https://aistudiocdn.com/three@^0.181.1/",
     "three": "https://aistudiocdn.com/three@^0.181.1",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.29.1"
+    "@google/genai": "https://esm.sh/@google/genai@^1.33.0"
   }
 }
 </script>
